# OpenWrt-MCP

./: .mdl_style.rb  .mdlrc  .pre-commit-config.yaml  .proselintrc.json  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
design/: communication_protocols.md  dependencies.md  design_summary.md  error_handling.md  feature_roadmap.md  feature_spec_stage1.md  feature_spec_stage2.md  feature_spec_stage3.md  project_structure.md
src/openwrt_mcp/: __init__.py  __main__.py  config.py  exceptions.py  server.py
src/openwrt_mcp/db/: __init__.py  engine.py  models.py
src/openwrt_mcp/managers/: __init__.py  connection_manager.py  device_manager.py
src/openwrt_mcp/tools/: __init__.py  network.py  registry.py  system.py  uci.py
src/openwrt_mcp/utils/: parsers.py  ssh.py  ubus.py
tests/: __init__.py  conftest.py
tests/unit/: test_device_manager.py
