[project]
name = "openwrt-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncssh>=2.21.1",
    "fastmcp>=2.13.1",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.27",
]

[project.scripts]
openwrt-mcp = "openwrt_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openwrt_mcp"]

[dependency-groups]
dev = [
    "ipython>=9.7.0",
    "python-dotenv>=1.2.1",
]
lint = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "ruff>=0.14.5",
]
test = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
